# TiArg

./: .sysobj.ti  CMakeLists.txt  README.md
autocomplete/: Makefile  arg.ti  main.cpp  main.cpp.autosave  store  teste  teste.cpp  ticomplete
examples/: example1.cpp
src/: tiarg-complete.cpp  tiarg.cpp  tiarg.hpp
